tests/ui/issues/issue-75283.stderr
error: incorrect function inside `extern` block
  --> $DIR/issue-75283.rs:2:8
   |
LL | extern "C" {
   | ---------- `extern` blocks define existing foreign functions and functions inside of them cannot have a body
LL |     fn lol() {
   |        ^^^ cannot have a body
   |
   = help: you might have meant to write a function accessible through FFI, which can be done by writing `extern fn` outside of the `extern` block
   = note: for more information, visit https://doc.rust-lang.org/std/keyword.extern.html
help: remove the invalid body
   |
LL |     fn lol() ;
   |              ~

error: aborting due to 1 previous error

